feat: add proxy and SSL/TLS configuration support with detailed documentation 📄✨
- Introduced comprehensive proxy configuration documentation for various protocols (HTTP, HTTPS, SOCKS) 🌐
- Added SSL/TLS configuration documentation to handle invalid and self-signed certificates 🔒
- Updated package.json and package-lock.json to include Express and related types for server handling 🚀
- Implemented Express server to manage MCP requests and handle JSON parsing efficiently 🛠️
- Enhanced server startup logic to allow custom port configuration via command line arguments ⚙️

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@playwright/browser-firefox": "1.53.1",
     "@playwright/browser-webkit": "1.53.1",
     "@playwright/test": "^1.53.1",
+    "@types/express": "^5.0.5",
+    "express": "^5.1.0",
     "mcp-evals": "^1.0.18",
     "playwright": "1.53.1",
     "uuid": "11.1.0"
