feat: add dotenv support for environment variable management 🌱✨ - Updated package.json and package-lock.json to include dotenv dependency. - Refactored index.ts to load environment variables and implement Bearer token authentication for secure access. 🔒

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@playwright/browser-webkit": "1.53.1",
     "@playwright/test": "^1.53.1",
     "@types/express": "^5.0.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mcp-evals": "^1.0.18",
     "playwright": "1.53.1",
