✨ Refactor test assertions to ensure type safety and improve clarity
- Updated multiple test files to cast `result.content[0]` to `{ text: string }` for better type safety. This change ensures that the tests correctly access the `text` property without TypeScript errors.
- Enhanced readability and maintainability of tests in `advancedInteraction.test.ts`, `console.test.ts`, `goNavigation.test.ts`, `interaction.test.ts`, `navigation.test.ts`, `output.test.ts`, `resize.test.ts`, `screenshot.test.ts`, and `visiblePage.test.ts`.
- Improved error handling assertions to maintain consistency across tests.

🛠️ Additionally, refactored the main server setup to use `McpServer` instead of `Server`, ensuring compatibility with the latest SDK changes.
- Adjusted request handlers to align with the new server structure, enhancing the overall architecture of the application.

📸 Updated `ScreenshotTool` to store screenshots in a more structured way, allowing for both text and image content to be returned. This change improves the functionality of the screenshot feature and enhances the user experience.

🔧 Cleaned up commented-out code in `tools.ts` for better code hygiene.

Overall, these changes improve the robustness of the test suite and the functionality of the screenshot tool, while also ensuring that the code adheres to best practices in TypeScript. 🚀

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
+    "prod": "node ./dist/index.js",
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "test": "jest --testMatch=\"<rootDir>/src/__tests__/**/*.test.ts\"",
@@ -27,7 +28,7 @@
     "url": "https://github.com/executeautomation/mcp-playwright.git"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.11.1",
+    "@modelcontextprotocol/sdk": "^1.22.0",
     "@playwright/browser-chromium": "1.53.1",
     "@playwright/browser-firefox": "1.53.1",
     "@playwright/browser-webkit": "1.53.1",
