--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@playwright/browser-webkit": "1.53.1",
     "@playwright/test": "^1.53.1",
     "@types/express": "^5.0.5",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mcp-evals": "^1.0.18",
     "playwright": "1.53.1",
-    "uuid": "11.1.0"
+    "uuid": "11.1.0",
+    "zod": "^3.25.76"
   },
   "keywords": [
     "playwright",
@@ -47,6 +49,7 @@
     "Claude MCP"
   ],
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.10.5",
     "jest": "^29.7.0",
